examples/type_system/failing/Stage150Type.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// Helper module for stage-aware fixture 150/153.
// Intentionally has a type diagnostic.

module Stage150Type {
    fn bad() -> Unit {
        let x: Bool = 42
    }
}
